--- a/dealer-terms/index.html
+++ b/dealer-terms/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting to https://www.broadlume.com/terms-of-use/</title>
-    <meta http-equiv="refresh" content="0; URL=https://www.broadlume.com/terms-of-use/">
-    <link rel="canonical" href="https://www.broadlume.com/terms-of-use/">
+    <meta http-equiv="refresh" content="0; URL=https://www.broadlume.com/dealer-terms">
+    <link rel="canonical" href="https://www.broadlume.com/dealer-terms">
   </head>    
   <body> 
-    <p>This page has moved to a <a href="https://www.broadlume.com/terms-of-use/">
-      www.broadlume.com/terms-of-use/</a>.</p> 
+    <p>This page has moved to a <a href="https://www.broadlume.com/dealer-terms">
+      https://www.broadlume.com/dealer-terms</a>.</p> 
   </body>  
 </html>
